--- a/FreeFlix/index.html
+++ b/FreeFlix/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <div class="navbar">
-    <img src="logo.png" alt="LOGO HERE" />
+    <img src="https://www.iconfinder.com/icons/649385/tv_monitor_movie_television_tv_series_watching_tv_icon" alt="LOGO HERE" />
     <div class="nav-links">
       <a href="index.html">Home</a>
       <input type="text" class="search-bar" placeholder="Search..." onfocus="openSearchModal()" />
