--- a/FreeFlix/index.html
+++ b/FreeFlix/index.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>My Website</title>
+  <title>FreeFlix</title>
   <link rel="stylesheet" href="css/home.css">
   <link rel="preload" href="css/home.css" as="style">
   <link rel="preload" href="js/home.js" as="script">
@@ -13,7 +13,7 @@
 
 <body>
   <div class="navbar">
-    <img src="https://www.iconfinder.com/icons/649385/tv_monitor_movie_television_tv_series_watching_tv_icon" alt="LOGO HERE" />
+    <img src="logo.png" alt="LOGO HERE" />
     <div class="nav-links">
       <a href="index.html">Home</a>
       <input type="text" class="search-bar" placeholder="Search..." onfocus="openSearchModal()" />
