--- a/FreeFlix/index.html
+++ b/FreeFlix/index.html
@@ -72,7 +72,7 @@
 
 <footer class="footer">
   <div class="footer-content">
-    <p>&copy; Made With Love 💜 By Cutilizer</p>
+    <p>Made With Love 💜 By Cutilizer</p>
     <div class="footer-links">
       <a href="#">Disclaimer</a>
       <a href="#">About Us</a>
