--- a/FreeFlix/index.html
+++ b/FreeFlix/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   <script defer src="js/home.js"></script>
-https://www.profitableratecpm.com/ejiwcqeu?key=5dfe533ec92c00cbc65598abf9dbe5f3
+  <script type='text/javascript' src='//pl26466316.profitableratecpm.com/b9/27/e1/b927e1993e26c79b95552487f73360f3.js'></script>
 </head>
 
 <body>
