--- a/FreeFlix/index.html
+++ b/FreeFlix/index.html
@@ -22,6 +22,8 @@
 </script>
 <script type="text/javascript" src="//www.highperformanceformat.com/aefc3eb9fde9851b4855e5e11e9f2785/invoke.js"></script>
 <div id="container-2645ab095f642c92af74e5b72f14e0fd"></div>
+<script async="async" data-cfasync="false" src="//pl26466357.profitableratecpm.com/2645ab095f642c92af74e5b72f14e0fd/invoke.js"></script>
+<div id="container-2645ab095f642c92af74e5b72f14e0fd"></div>
 </head>
 
 <body>
