--- a/FreeFlix/index.html
+++ b/FreeFlix/index.html
@@ -1,14 +1,14 @@
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
+  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>FreeFlix</title>
+  <title>My Website</title>
   <link rel="stylesheet" href="css/home.css">
   <link rel="preload" href="css/home.css" as="style">
   <link rel="preload" href="js/home.js" as="script">
   <link rel="manifest" href="manifest.json">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <script defer src="js/home.js"></script>
 </head>
 
 <body>
