--- a/FreeFlix/index.html
+++ b/FreeFlix/index.html
@@ -1,7 +1,6 @@
 <html lang="en">
 <head>
-<script async="async" data-cfasync="false" src="//genderorganiccensus.com/222388aa83da1a001f1837adb19c1304/invoke.js"></script>
-<script type='text/javascript' src='//genderorganiccensus.com/d5/4b/e6/d54be69c0cc7ec09ef1b2a51307b8631.js'></script>
+<meta name="monetag" content="ba71acb22ef6da55ff66e1a0efcbd5ad">
 <div id="container-222388aa83da1a001f1837adb19c1304"></div>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -12,16 +11,6 @@
   <link rel="manifest" href="manifest.json">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   <script defer src="js/home.js"></script>
-<script type="text/javascript">
-	atOptions = {
-		'key' : '50ba85358edc38b213146e7e9d845989',
-		'format' : 'iframe',
-		'height' : 50,
-		'width' : 320,
-		'params' : {}
-	};
-</script>
-<script type="text/javascript" src="//genderorganiccensus.com/50ba85358edc38b213146e7e9d845989/invoke.js"></script>
 	
 </head>
 
