--- a/FreeFlix/index.html
+++ b/FreeFlix/index.html
@@ -20,7 +20,7 @@
   <div class="navbar">
     <img src="logo.png" alt="LOGO HERE" />
     <div class="nav-links">
-      <a href="index.html">Home</a>
+      <a href="index.html"></a>
       <input type="text" class="search-bar" placeholder="Search..." onfocus="openSearchModal()" />
     </div>
   </div>
