--- a/FreeFlix/index.html
+++ b/FreeFlix/index.html
@@ -46,7 +46,7 @@
 
   <div class="modal" id="modal">
     <div class="modal-content">
-      <span class="close" onclick="closeModal()" style="color: red;">&times;</span>
+      <span class="close" onclick="closeModal()" style="color: purple;">&times;</span>
       <div class="modal-body">
   <img id="modal-image" src="" alt="" />
   <div class="modal-text">
@@ -69,7 +69,7 @@
   </div>
 
   <div class="search-modal" id="search-modal">
-    <span class="close" onclick="closeSearchModal()" style="color: red;">&times;</span>
+    <span class="close" onclick="closeSearchModal()" style="color: purple;">&times;</span>
     <input type="text" id="search-input" placeholder="Search for a movie or show..." oninput="searchTMDB()" />
     <div class="results" id="search-results"></div>
   </div>
@@ -78,9 +78,9 @@
   <div class="footer-content">
     <p>MADE WITH 💜 BY CUTILIZER</p>
     <div class="footer-links">
-      <a href="#">Disclaimer</a>
-      <a href="#">About Us</a>
-      <a href="#">Contact Us</a>
+      <a href="#" style="color: purple;">Disclaimer</a>
+      <a href="https://github.com/CUT1L1Z3R/FreeFlix" target="_blank" style="color: purple;">About Us</a>
+      <a href="https://facebook.com/cutilizer" target="_blank" style="color: purple;">Contact Us</a>
     </div>
   </div>
 </footer>
