--- a/FreeFlix/index.html
+++ b/FreeFlix/index.html
@@ -79,8 +79,8 @@
     <p>MADE WITH 💜 BY CUTILIZER</p>
     <div class="footer-links">
       <a href="#" style="color: purple;">Disclaimer</a>
-      <a href="https://github.com/CUT1L1Z3R/FreeFlix" target="_blank" style="color: purple;">About Us</a>
-      <a href="https://facebook.com/cutilizer" target="_blank" style="color: purple;">Contact Us</a>
+      <a href="https://github.com/CUT1L1Z3R/FreeFlix" target="_blank" style="color: purple;">About Me</a>
+      <a href="https://facebook.com/cutilizer" target="_blank" style="color: purple;">Contact Me</a>
     </div>
   </div>
 </footer>
