--- a/FreeFlix/index.html
+++ b/FreeFlix/index.html
@@ -6,7 +6,7 @@
 <div id="container-222388aa83da1a001f1837adb19c1304"></div>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>FreeFlixx</title>
+  <title>FreeFlixx - Stream Trending Movies & TV Shows</title>
   <link rel="stylesheet" href="css/home.css">
   <link rel="preload" href="css/home.css" as="style">
   <link rel="preload" href="js/home.js" as="script">
