--- a/FreeFlix/index.html
+++ b/FreeFlix/index.html
@@ -25,8 +25,9 @@
     </div>
   </div>
 
-  <div class="banner" id="banner">
-    <h1 id="banner-title"></h1>
+  <div class="banner">
+    <h1>Welcome to FreeFlixx</h1>
+    <p>Stream trending movies, TV shows, and Anime</p>
   </div>
 
   <div class="row">
