--- a/FreeFlix/index.html
+++ b/FreeFlix/index.html
@@ -6,7 +6,7 @@
 <div id="container-222388aa83da1a001f1837adb19c1304"></div>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>FreeFlixx - Stream Trending Movies & TV Shows</title>
+  <title>FreeFlixx</title>
   <link rel="stylesheet" href="css/home.css">
   <link rel="preload" href="css/home.css" as="style">
   <link rel="preload" href="js/home.js" as="script">
@@ -25,9 +25,8 @@
     </div>
   </div>
 
-  <div class="banner">
-    <h1>Welcome to FreeFlixx</h1>
-    <p>Stream trending movies, TV shows, and Anime</p>
+  <div class="banner" id="banner">
+    <h1 id="banner-title"></h1>
   </div>
 
   <div class="row">
