--- a/FreeFlix/index.html
+++ b/FreeFlix/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
     <link rel="icon" href="/assests/netflix.ico">
-    <title>Netflix</title>
+    <title>FreeFlixx - Stream Movies & TV-Shows For Free</title>
 </head>
 
 <body>
