--- a/FreeFlix/index.html
+++ b/FreeFlix/index.html
@@ -17,6 +17,7 @@
         <div class="input-container">
             <input type="text" id="searchInput" placeholder="Search movies...">
             <div id="searchResults"></div>
+            <button id="goToWatchlist" class="watchList-Btn">BookMark</button>
         </div>
     </header>
 
