--- a/FreeFlix/movie_details/movie_details.html
+++ b/FreeFlix/movie_details/movie_details.html
@@ -7,6 +7,7 @@
     <meta name="monetag" content="9d74356880b3ebb47a990a92b03643e2">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <button class="back-button" onclick="history.back();">Back</button>
     <link rel="stylesheet" href="/movie_details/movie_details.css">
     <link rel="icon" href="/assests/netflix.ico">
     <title>Movie Details</title>
