--- a/FreeFlix/movie_details/movie_details.html
+++ b/FreeFlix/movie_details/movie_details.html
@@ -10,12 +10,7 @@
     <link rel="stylesheet" href="/movie_details/movie_details.css">
     <link rel="icon" href="/assests/netflix.ico">
     <title>Movie Details</title>
-    <button class="back-button" style="display: inline-block; padding: 5px 10px; border: none; border-radius: 5px; onclick="history.back()"; background-color: purple; color: white; cursor: pointer; font-size: 16px;">Back</button>
-    <script>
-    document.getElementById('back-button').addEventListener('click', function() {
-        history.back();
-    });
-</script>
+  <button class="back-button" style="display: inline-block; padding: 5px 10px; border: none; border-radius: 5px; background-color: purple; color: white; cursor: pointer; font-size: 16px;" onclick="history.back()">Back</button>
 </head>
 
 <body>
