--- a/FreeFlix/movie_details/movie_details.html
+++ b/FreeFlix/movie_details/movie_details.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/movie_details/movie_details.css">
     <link rel="icon" href="/assests/netflix.ico">
     <title>Movie Details</title>
-    <button class="back-button" style="display: inline-block; padding: 5px 10px; border: none; border-radius: 50%; background-color: transparent; border: 2px solid purple; cursor: pointer; width: 20px; height: 20px;" onclick="history.back()">Back</button>
+    <button class="back-button" style="display: inline-block; padding: 0; border: none; border-radius: 50%; background-color: transparent; border: 2px solid purple; cursor: pointer; width: 30px; height: 30px; text-align: center; line-height: 30px;" onclick="history.back()">Back</button>
 </head>
 
 <body>
