--- a/FreeFlix/movie_details/movie_details.html
+++ b/FreeFlix/movie_details/movie_details.html
@@ -10,8 +10,9 @@
     <link rel="stylesheet" href="/movie_details/movie_details.css">
     <link rel="icon" href="/assests/netflix.ico">
     <title>Movie Details</title>
-    <button class="back-button" style="display: inline-block; padding: 0; border: none; border-radius: 50%; background-color: transparent; border: 2px solid purple; cursor: pointer; width: 30px; height: 30px; text-align: center; line-height: 30px;" onclick="history.back()">Back</button>
-</head>
+    <button class="bg-purple-500 hover:bg-purple-700 text-white font-bold py-2 px-4 rounded">
+    Click me
+</button>
 
 <body>
     <!-- Header section -->
