--- a/FreeFlix/movie_details/movie_details.html
+++ b/FreeFlix/movie_details/movie_details.html
@@ -10,9 +10,8 @@
     <link rel="stylesheet" href="/movie_details/movie_details.css">
     <link rel="icon" href="/assests/netflix.ico">
     <title>Movie Details</title>
-    <button class="bg-purple-500 hover:bg-purple-700 text-white font-bold py-2 px-4 rounded">
-    Click me
-</button>
+    <INPUT TYPE="button" VALUE="Back" onClick="history.go(-3);">
+</head>
 
 <body>
     <!-- Header section -->
