--- a/FreeFlix/movie_details/movie_details.html
+++ b/FreeFlix/movie_details/movie_details.html
@@ -16,6 +16,7 @@
 <body>
     <!-- Header section -->
     <header class="header">
+    <img src="/assests/netflix.png" alt="logo" class="logo">
     </header>
 
     <!-- Movie details section -->
