--- a/FreeFlix/index.html
+++ b/FreeFlix/index.html
@@ -23,20 +23,18 @@
 
     <!-- Banner container -->
     <div id="banner-container">
-        <img id="banner" src="" alt="banner" />
-        <div id="details-container">
-            <h1 id="banner-title"></h1>
-            <div id="button-container">
-                <button id="play-button">
-                    <img style="width: 0.8rem; height: 0.8rem;" src="/assests/play.png" />
-                    <span>Play</span>
-                </button>
-                <button id="more-info">
-                    <img id="info-icon" src="/assests/info.png" />
-                    <span>More Information</span>
-                </button>
-            </div>
-        </div>
+  <img id="banner" src="..." alt="banner">
+  <div id="banner-overlay"></div> <!-- ADD THIS -->
+  <div id="details-container">
+    <h1 id="banner-title">Movie Title</h1>
+    <div id="button-container">
+      <button id="play-button">▶ Play</button>
+      <button id="more-info">
+        <img src="info-icon.png" id="info-icon" alt="Info"> More Info
+      </button>
+    </div>
+  </div>
+</div>
         <div id="empty"></div>
     </div>
 
