--- a/FreeFlix/index.html
+++ b/FreeFlix/index.html
@@ -30,7 +30,8 @@
     <div id="button-container">
       <button id="play-button">▶ Play</button>
       <button id="more-info">
-        <img src="info-icon.png" id="info-icon" alt="Info"> More Info
+         <img id="info-icon" src="/assests/info.png" />
+         <span>More Information</span>
       </button>
     </div>
   </div>
