--- a/FreeFlix/movie_details/movie_details.html
+++ b/FreeFlix/movie_details/movie_details.html
@@ -61,14 +61,19 @@
             <!-- watchList button section -->
             <button class="watchListBtn"></button>
             <!-- Change server dropdown -->
-<div id="server-selector" class="server-selector-dropdown">
-  <label for="server">Select Server:</label>
-  <select id="server" class="server-selector-select">
-    <option value="vidsrc.cc">Vidsrc.cc</option>
-    <option value="vidsrc.me">Vidsrc.me</option>
-    <option value="player.videasy.net">Player.Videasy.net</option>
-    <option value="2embed">2Embed</option>
-  </select>
+<button id="change-server-btn" class="change-server-btn"><b>CHANGE SERVER</b></button>
+ 
+ <!-- Server selector dropdown -->
+             <!-- Change server dropdown -->
+ <div id="server-selector" class="server-selector-dropdown">
+   <label for="server">Select Server:</label>
+   <select id="server" class="server-selector-select">
+     <option value="player.videasy.net">Player.Videasy.net</option>
+     <option value="vidsrc.cc">Vidsrc.cc</option>
+     <option value="vidsrc.me">Vidsrc.me</option>
+     <option value="player.videasy.net">Player.Videasy.net</option>
+     <option value="2embed">2Embed</option>
+   </select>
 </div>
 
     <script src="/movie_details/movie_details.js"></script>
