--- a/FreeFlix/index.html
+++ b/FreeFlix/index.html
@@ -47,6 +47,15 @@
         <div class=" movie-container">
             <button class="navigation-button previous netflix-previous">&lt;</button>
 
+        <div class="movie-poster-container">
+  <img src="https://image.tmdb.org/t/p/w500${imageUrl}" alt="${item.title || item.name}" class="movie-poster">
+  <div class="movie-info">
+    <h3 class="movie-title">${item.title || item.name}</h3>
+    <p class="movie-rating">Rating: ${item.vote_average || 'N/A'}</p>
+  </div>
+</div>
+
+
             <!-- Display netflix movies here -->
             <div class="movies-box netflix-container"></div>
 
