--- a/FreeFlix/index.html
+++ b/FreeFlix/index.html
@@ -134,6 +134,14 @@
             <button class="navigation-button next action-next">&gt;</button>
         </div>
     </section>
+    <div class="movie-poster-container">
+  <img src="https://image.tmdb.org/t/p/w500${imageUrl}" alt="${item.title || item.name}" class="movie-poster">
+  <div class="movie-info">
+    <h3 class="movie-title">${item.title || item.name}</h3>
+    <p class="movie-rating">Rating: ${item.vote_average || 'N/A'}</p>
+  </div>
+</div>
+
 
     <script src="index.js"></script>
 </body>
