--- a/FreeFlix/index.html
+++ b/FreeFlix/index.html
@@ -44,6 +44,9 @@
     <section class="movie-section">
         <h1>NETFLIX ORIGINALS</h1>
 
+        <div class=" movie-container">
+            <button class="navigation-button previous netflix-previous">&lt;</button>
+
             <!-- Display netflix movies here -->
             <div class="movies-box netflix-container"></div>
 
