--- a/FreeFlix/movie_details/movie_details.html
+++ b/FreeFlix/movie_details/movie_details.html
@@ -68,6 +68,7 @@
  <div id="server-selector" class="server-selector-dropdown">
    <label for="server">Select Server:</label>
    <select id="server" class="server-selector-select">
+     <option value="movieapi.club">MovieAPI.Club</option>
      <option value="player.videasy.net">Player.Videasy.net</option>
      <option value="vidsrc.cc">Vidsrc.cc</option>
      <option value="vidsrc.me">Vidsrc.me</option>
