--- a/FreeFlix/movie_details/movie_details.html
+++ b/FreeFlix/movie_details/movie_details.html
@@ -68,11 +68,11 @@
  <div id="server-selector" class="server-selector-dropdown">
    <label for="server">Select Server:</label>
    <select id="server" class="server-selector-select">
-     <option value="movieapi.club">MovieAPI.Club</option>
-     <option value="player.videasy.net">Player.Videasy.net</option>
-     <option value="vidsrc.cc">Vidsrc.cc</option>
-     <option value="vidsrc.me">Vidsrc.me</option>
-     <option value="2embed">2Embed</option>
+     <option value="movieapi.club">TSUKASA 4K</option>
+     <option value="player.videasy.net">MIZUKI 4K</option>
+     <option value="vidsrc.cc">KANADE 1080P</option>
+     <option value="vidsrc.me">MAFUYU 1080P</option>
+     <option value="2embed">OTORI 720P</option>
    </select>
 </div>
 
