--- a/FreeFlix/movie_details/movie_details.html
+++ b/FreeFlix/movie_details/movie_details.html
@@ -73,6 +73,7 @@
      <option value="vidsrc.cc">KANADE 1080P</option>
      <option value="vidsrc.me">MAFUYU 1080P</option>
      <option value="2embed">OTORI 720P</option>
+    <button class="close-button" style="position: absolute; top: 10px; right: 10px;">Close</button>
    </select>
 </div>
 
