--- a/FreeFlix/movie_details/movie_details.html
+++ b/FreeFlix/movie_details/movie_details.html
@@ -68,11 +68,11 @@
  <div id="server-selector" class="server-selector-dropdown">
    <label for="server">Select Server:</label>
    <select id="server" class="server-selector-select">
-     <option value="movieapi.club">TSUKASA 4K</option>
-     <option value="player.videasy.net">MIZUKI 4K</option>
-     <option value="vidsrc.cc">KANADE 1080P</option>
-     <option value="vidsrc.me">MAFUYU 1080P</option>
-     <option value="2embed">OTORI 720P</option>
+     <option value="vidsrc.cc">KANADE 4K FAST</option>
+     <option value="movieapi.club">TSUKASA 4K FAST</option>
+     <option value="player.videasy.net">MIZUKI 1080p FAST</option>
+     <option value="vidsrc.me">MAFUYU 1080P FAST</option>
+     <option value="2embed">OTORI 720P SLOW</option>
     <button class="close-button" style="position: absolute; top: 10px; right: 10px;">Close</button>
    </select>
 </div>
