--- a/FreeFlix/movie_details/movie_details.html
+++ b/FreeFlix/movie_details/movie_details.html
@@ -80,9 +80,9 @@
                 <label for="server">Select Server:</label>
                 <select id="server" class="server-selector-select">
                     <option value="vidlink.pro">ICHIKA 4K PRO FASTEST</option>
-                    <option value="vidsrc.cc">KANADE 4K FASTEST</option>
-                    <option value="movieapi.club">SAKI 4K FAST</option>
-                    <option value="player.videasy.net">MIZUKI 1080p FAST</option>
+                    <option value="player.videasy.net">MIZUKI 4K FASTEST</option>
+                    <option value="vidsrc.cc">KANADE 4K FAST</option>
+                    <option value="movieapi.club">SAKI 2140P SLOW </option>
                     <option value="vidsrc.me">MAFUYU 1080P SLOW</option>
                     <option value="2embed">OTORI 720P SLOW</option>
                 </select>
