--- a/FreeFlix/movie_details/movie_details.html
+++ b/FreeFlix/movie_details/movie_details.html
@@ -79,7 +79,7 @@
             <div id="server-selector" class="server-selector-dropdown">
                 <label for="server">Select Server:</label>
                 <select id="server" class="server-selector-select">
-                    <option value="player.videasy.net">MIZUKI 4K FASTEST</option>
+                    <option value="player.videasy.net">MIZUKI STABLE</option>
                     <option value="vidlink.pro">ICHIKA 4K PRO FASTEST</option>
                     <option value="vidsrc.cc">KANADE 4K FAST</option>
                     <option value="movieapi.club">SAKI 2140P SLOW </option>
