--- a/FreeFlix/movie_details/movie_details.html
+++ b/FreeFlix/movie_details/movie_details.html
@@ -70,20 +70,58 @@
             </div>
 
             <!-- watchList button section -->
-            <button class="watchListBtn"></button>
+            <button class="watchListBtn">Add To WatchList</button>
 
-            <!-- Change server dropdown -->
-            <button id="change-server-btn" class="change-server-btn"><b>CHANGE SERVER</b></button>
+            <!-- Server Dropdown - Redesigned to match watchlist button -->
+            <div class="server-dropdown">
+                <div class="server-dropdown-header">
+                    <div class="selected-server">
+                        <span class="server-name">MAFUYU</span>
+                        <span class="server-tag tag-recommended">Recommended</span>
+                        <span class="server-tag tag-stable">Stable</span>
+                        <span class="server-tag tag-4k">4K</span>
+                    </div>
+                    <span class="dropdown-arrow">▼</span>
+                </div>
+                <div class="server-dropdown-content">
+                    <div class="server-option" data-server="player.videasy.net">
+                        <span class="server-name">MAFUYU</span>
+                        <span class="server-tag tag-recommended">Recommended</span>
+                        <span class="server-tag tag-stable">Stable</span>
+                        <span class="server-tag tag-4k">4K</span>
+                    </div>
+                    <div class="server-option" data-server="vidlink.pro">
+                        <span class="server-name">MIZUKI</span>
+                        <span class="server-tag tag-stable">Stable</span>
+                        <span class="server-tag tag-4k">4K</span>
+                        <span class="server-tag tag-hd">HD</span>
+                    </div>
+                    <div class="server-option" data-server="vidsrc.cc">
+                        <span class="server-name">KANADE</span>
+                        <span class="server-tag tag-stable">Stable</span>
+                        <span class="server-tag tag-hd">HD</span>
+                    </div>
+                    <div class="server-option" data-server="movieapi.club">
+                        <span class="server-name">SAKI</span>
+                        <span class="server-tag tag-4k">4K</span>
+                    </div>
+                    <div class="server-option" data-server="vidsrc.me">
+                        <span class="server-name">OTORI</span>
+                        <span class="server-tag tag-hd">HD</span>
+                    </div>
+                </div>
+            </div>
 
-            <!-- Server selector dropdown -->
-            <div id="server-selector" class="server-selector-dropdown">
+            <!-- Old Server selector dropdown - hidden, kept for backward compatibility -->
+            <button id="change-server-btn" class="change-server-btn" style="display: none;"><b>CHANGE SERVER</b></button>
+            <div id="server-selector" class="server-selector-dropdown" style="display: none;">
                 <label for="server">Select Server:</label>
                 <select id="server" class="server-selector-select">
-                    <option value="player.videasy.net">MIZUKI STABLE</option>
-                    <option value="vidlink.pro">ICHIKA 4K PRO FASTEST</option>
+                    <option value="player.videasy.net">MIZUKI 1080p FAST</option>
+                    <option value="vidlink.pro">VIDLINK PRO 4K FAST</option>
                     <option value="vidsrc.cc">KANADE 4K FAST</option>
-                    <option value="movieapi.club">SAKI 2140P SLOW </option>
-                    <option value="vidsrc.me">MAFUYU 1080P SLOW</option>
+                    <option value="movieapi.club">TSUKASA 4K FAST</option>
+                    <option value="vidsrc.me">MAFUYU 1080P FAST</option>
                     <option value="2embed">OTORI 720P SLOW</option>
                 </select>
                 <button class="close-button" style="position: absolute; top: 10px; right: 10px;">Close</button>
