--- a/FreeFlix/index.html
+++ b/FreeFlix/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
-    <link rel="icon" href="/assests/netflix.ico">
+    <link rel="icon" href="/assets/netflix.ico">
     <title>FreeFlixx - Stream Movies & TV Shows For Free</title>
 </head>
 
 <body>
     <!-- Header container -->
     <header class="header">
-        <img src="/assests/netflix.png" alt="logo" id="netflix-logo">
+        <img src="/assets/netflix.png" alt="logo" id="netflix-logo">
         <div class="input-container">
             <input type="text" id="searchInput" placeholder="Search movies...">
             <div id="searchResults"></div>
@@ -27,11 +27,11 @@
             <h1 id="banner-title"></h1>
             <div id="button-container">
                 <button id="play-button">
-                    <img style="width: 0.8rem; height: 0.8rem;" src="/assests/play.png" />
+                    <img style="width: 0.8rem; height: 0.8rem;" src="/assets/play.png" />
                     <span>Play</span>
                 </button>
                 <button id="more-info">
-                    <img id="info-icon" src="/assests/info.png" />
+                    <img id="info-icon" src="/assets/info.png" />
                     <span>More Information</span>
                 </button>
             </div>
@@ -43,10 +43,10 @@
     <section class="movie-section">
         <h1>NETFLIX ORIGINALS</h1>
 
-        <div class=" movie-container">
+        <div class="movie-container">
             <button class="navigation-button previous netflix-previous">&lt;</button>
 
-            <!-- Display netflix movies here -->
+            <!-- Display Netflix Originals here -->
             <div class="movies-box netflix-container"></div>
 
             <button class="navigation-button next netflix-next">&gt;</button>
@@ -68,10 +68,10 @@
     </section>
 
     <!-- Top Movies container -->
-    <section class="movie-section ">
-        <h1>Top Rated </h1>
+    <section class="movie-section">
+        <h1>Top Rated</h1>
 
-        <div class=" movie-container">
+        <div class="movie-container">
             <button class="navigation-button previous top-previous">&lt;</button>
 
             <!-- Display top movies here -->
@@ -82,24 +82,24 @@
     </section>
 
     <!-- Horror Movies container -->
-    <section class="movie-section ">
-        <h1>Horror Movies </h1>
+    <section class="movie-section">
+        <h1>Horror Movies</h1>
 
-        <div class=" movie-container">
+        <div class="movie-container">
             <button class="navigation-button previous horror-previous">&lt;</button>
 
             <!-- Display horror movies here -->
-            <div class="movies-box  horror-container"></div>
+            <div class="movies-box horror-container"></div>
 
             <button class="navigation-button next horror-next">&gt;</button>
         </div>
     </section>
 
-    <!-- comedy Movies container -->
-    <section class="movie-section ">
-        <h1>Comedy Movies </h1>
+    <!-- Comedy Movies container -->
+    <section class="movie-section">
+        <h1>Comedy Movies</h1>
 
-        <div class=" movie-container ">
+        <div class="movie-container">
             <button class="navigation-button previous comedy-previous">&lt;</button>
 
             <!-- Display comedy movies here -->
@@ -109,11 +109,11 @@
         </div>
     </section>
 
-    <!-- action Movies container -->
-    <section class="movie-section ">
-        <h1>Action Movies </h1>
+    <!-- Action Movies container -->
+    <section class="movie-section">
+        <h1>Action Movies</h1>
 
-        <div class=" movie-container ">
+        <div class="movie-container">
             <button class="navigation-button previous action-previous">&lt;</button>
 
             <!-- Display action movies here -->
@@ -123,6 +123,7 @@
         </div>
     </section>
 
+    <!-- Load script at the end for better performance -->
     <script src="index.js"></script>
 </body>
 
