--- a/FreeFlix/index.html
+++ b/FreeFlix/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
-    <link rel="icon" href="/assets/freeflixx.ico">
+    <link rel="icon" href="assets/freeflixx.ico">
     <title>FreeFlixx - Stream Movies & TV Shows For Free</title>
 </head>
 
 <body>
     <!-- Header container -->
     <header class="header">
-        <img src="/assets/freeflixx.png" alt="logo" id="netflix-logo">
+        <img src="assets/freeflixx.png" alt="logo" id="netflix-logo">
         <div class="input-container">
             <input type="text" id="searchInput" placeholder="Search movies...">
             <div id="searchResults"></div>
@@ -27,11 +27,11 @@
             <h1 id="banner-title"></h1>
             <div id="button-container">
                 <button id="play-button">
-                    <img style="width: 0.8rem; height: 0.8rem;" src="/assets/playg.png" />
+                    <img style="width: 0.8rem; height: 0.8rem;" src="assets/playg.png" />
                     <span>Play</span>
                 </button>
                 <button id="more-info">
-                    <img id="info-icon" src="/assets/infom.png" />
+                    <img id="info-icon" src="assets/infom.png" />
                     <span>More Information</span>
                 </button>
             </div>
