Attemp to fix Scroll glitch on mobile

--- a/FreeFlix/index.html
+++ b/FreeFlix/index.html
@@ -276,8 +276,10 @@
         </svg>
     </button>
 
-    <!-- Load script at the end for better performance -->
+    <!-- Load scripts at the end for better performance -->
     <script src="index.js"></script>
+    <script src="touch-scroll.js"></script>
+    <script src="navigation-fix.js"></script>
 </body>
 
 </html>
