--- a/FreeFlix/movie_details/movie_details.html
+++ b/FreeFlix/movie_details/movie_details.html
@@ -19,7 +19,7 @@
 
     <!-- Server change notice banner -->
     <div id="server-notice-banner" class="server-notice-banner">
-        <p>You can change servers if you have any issue when streaming a video!</p>
+        <p>Change the server if you encounter any issue when streaming a video!</p>
         <button id="banner-close-btn" class="banner-close-btn">×</button>
     </div>
 
