--- a/FreeFlix/index.html
+++ b/FreeFlix/index.html
@@ -70,6 +70,16 @@
             </div>
         </section>
 
+        <!-- Popular on Disney+ container -->
+        <section class="movie-section tv-section" id="disney-popular">
+            <h1>Popular on Disney+</h1>
+            <div class="movie-container">
+                <button class="navigation-button previous disney-previous">&lt;</button>
+                <div class="movies-box disney-container"></div>
+                <button class="navigation-button next disney-next">&gt;</button>
+            </div>
+        </section>
+
         <!-- Trending Movies container -->
         <section class="movie-section" id="trending-now">
             <h1>Trending Now</h1>
@@ -136,6 +146,51 @@
             </div>
         </section>
 
+        <!-- Action Movies container -->
+        <section class="movie-section movie-genre-section" id="action-movies">
+            <h1>Action Movies</h1>
+            <div class="movie-container">
+                <button class="navigation-button previous action-previous">&lt;</button>
+                <div class="movies-box action-container"></div>
+                <button class="navigation-button next action-next">&gt;</button>
+            </div>
+        </section>
+        <!-- Drama Movies container -->
+        <section class="movie-section movie-genre-section" id="drama-movies">
+            <h1>Drama Movies</h1>
+            <div class="movie-container">
+                <button class="navigation-button previous drama-previous">&lt;</button>
+                <div class="movies-box drama-container"></div>
+                <button class="navigation-button next drama-next">&gt;</button>
+            </div>
+        </section>
+        <!-- Fantasy Movies container -->
+        <section class="movie-section movie-genre-section" id="fantasy-movies">
+            <h1>Fantasy Movies</h1>
+            <div class="movie-container">
+                <button class="navigation-button previous fantasy-previous">&lt;</button>
+                <div class="movies-box fantasy-container"></div>
+                <button class="navigation-button next fantasy-next">&gt;</button>
+            </div>
+        </section>
+        <!-- Romance Movies container -->
+        <section class="movie-section movie-genre-section" id="romance-movies">
+            <h1>Romance Movies</h1>
+            <div class="movie-container">
+                <button class="navigation-button previous romance-previous">&lt;</button>
+                <div class="movies-box romance-container"></div>
+                <button class="navigation-button next romance-next">&gt;</button>
+            </div>
+        </section>
+        <!-- Mystery Movies container -->
+        <section class="movie-section movie-genre-section" id="mystery-movies">
+            <h1>Mystery Movies</h1>
+            <div class="movie-container">
+                <button class="navigation-button previous mystery-previous">&lt;</button>
+                <div class="movies-box mystery-container"></div>
+                <button class="navigation-button next mystery-next">&gt;</button>
+            </div>
+        </section>
         <!-- Drama TV Shows container -->
         <section class="movie-section tv-section" id="drama-tv">
             <h1>Drama TV Shows</h1>
@@ -166,6 +221,46 @@
                 <button class="navigation-button previous comedy-tv-previous">&lt;</button>
                 <div class="movies-box comedy-tv-container"></div>
                 <button class="navigation-button next comedy-tv-next">&gt;</button>
+            </div>
+        </section>
+
+        <!-- Action & Adventure TV Shows container -->
+        <section class="movie-section" id="action-adventure-tv">
+            <h1>Action & Adventure TV Shows</h1>
+            <div class="movie-container">
+                <button class="navigation-button previous actionadventure-previous">&lt;</button>
+                <div class="movies-box actionadventure-container"></div>
+                <button class="navigation-button next actionadventure-next">&gt;</button>
+            </div>
+        </section>
+
+        <!-- Mystery TV Shows container -->
+        <section class="movie-section" id="mystery-tv">
+            <h1>Mystery TV Shows</h1>
+            <div class="movie-container">
+                <button class="navigation-button previous mystery-previous">&lt;</button>
+                <div class="movies-box mystery-container"></div>
+                <button class="navigation-button next mystery-next">&gt;</button>
+            </div>
+        </section>
+
+        <!-- Fantasy TV Shows container -->
+        <section class="movie-section" id="fantasy-tv">
+            <h1>Fantasy TV Shows</h1>
+            <div class="movie-container">
+                <button class="navigation-button previous fantasy-previous">&lt;</button>
+                <div class="movies-box fantasy-container"></div>
+                <button class="navigation-button next fantasy-next">&gt;</button>
+            </div>
+        </section>
+
+        <!-- Reality TV container -->
+        <section class="movie-section" id="reality-tv">
+            <h1>Reality TV</h1>
+            <div class="movie-container">
+                <button class="navigation-button previous reality-previous">&lt;</button>
+                <div class="movies-box reality-container"></div>
+                <button class="navigation-button next reality-next">&gt;</button>
             </div>
         </section>
 
