--- a/FreeFlix/index.html
+++ b/FreeFlix/index.html
@@ -7,6 +7,7 @@
     <meta name="monetag" content="9d74356880b3ebb47a990a92b03643e2">
     <meta name="google-site-verification" content="EJNfxEhGqbOQLqcNURfu1ZY9KZCFHLG2L9wSat1bM5o" />
     <meta name="description" content="Stream Your Favorite Movies And TV Shows For Free on FreeFlixx">
+    <meta name="keywords" content="free movies, free TV shows, streaming, FreeFlixx, watch online, entertainment, free streaming, film streaming">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="index.css">
